--- a/src/assets/css/mediaFiles/homemedia.css
+++ b/src/assets/css/mediaFiles/homemedia.css
@@ -27,6 +27,7 @@
 }
 @media screen and (max-width: 820px) {
   .maininde .uppercover .cov_text {
+    width: 80%;
     margin-right: 0;
     display: flex;
     justify-content: center;
@@ -70,10 +71,23 @@
     width: 100%;
   }
 }
-@media screen and (max-width: 360px) {
+@media screen and (max-width: 410px) {
   .maininde .uppercover .cov_text h1 {
-    font-size: 50px;
+    font-size: 40px;
+    margin-bottom: 15px;
   }
+
+  .maininde .uppercover .cov_text p {
+    font-size: 18px;
+    margin-bottom: 15px;
+  }
+}
+@media screen and (max-width: 380px) {
+  .maininde .uppercover .simple_footer {
+    bottom: 20px;
+  }
+}
+@media screen and (max-width: 360px) {
   .maininde .uppercover .simple_footer {
     font-size: 10px;
   }
@@ -101,7 +115,7 @@
     height: 150px !important;
   }
   .maininde .uppercover .simple_footer {
-    bottom: 10px;
+    bottom: 2px;
   }
 }
 @media screen and (max-width: 310px) {
