--- a/src/assets/css/footer.css
+++ b/src/assets/css/footer.css
@@ -54,7 +54,7 @@
 }
 .footer_main .footer_mid .footer_column p {
   margin-bottom: 15px;
-  word-break: break-all;
+  line-height: 25px;
 }
 .footer_main .footer_mid .footer_column ul li {
   list-style: none;
