--- a/src/assets/css/coursemanage.css
+++ b/src/assets/css/coursemanage.css
@@ -63,7 +63,7 @@
 }
 .main_ar_course .course_body .course_card {
   position: relative;
-  height: 350px;
+  height: 370px;
   background-image: linear-gradient(30deg, #fff, #fff, #e7c691);
   cursor: pointer;
   border: 1px solid #8b8b8b;
@@ -156,7 +156,7 @@
 .main_ar_course .course_body .course_card .cscard_body {
   position: relative;
   padding: 12px 8px 15px;
-  max-height: 100px;
+  max-height: 130px;
   overflow-y: auto;
 }
 .main_ar_course .course_body .course_card .cscard_body::-webkit-scrollbar {
@@ -205,7 +205,8 @@
   position: absolute;
   bottom: 0;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  flex-direction: column;
   align-items: center;
   font-size: 11px;
   background-color: #f5f5f587;
