--- a/src/assets/css/mediaFiles/homemedia.css
+++ b/src/assets/css/mediaFiles/homemedia.css
@@ -24,6 +24,9 @@
   .maininde .get_start_sec .main_get_start .get_start_column img {
     width: 400px;
   }
+  .line h1 {
+    width: 90%;
+  }
 }
 @media screen and (max-width: 820px) {
   .maininde .uppercover .cov_text {
