--- a/src/assets/css/viewallsts.css
+++ b/src/assets/css/viewallsts.css
@@ -59,6 +59,25 @@
   border: 1px solid transparent;
   box-shadow: 0px 0px 18px #dbdbdb;
 }
+.search_st a {
+  width: 140px;
+  padding: 8px;
+  margin-left: 5px;
+  border-radius: 20px;
+  border: 1px solid #ff9d00;
+  background-color: #fff;
+  color: #ff9d00;
+  cursor: pointer;
+  outline: none;
+  font-size: 12px;
+  white-space: nowrap;
+  text-decoration: none;
+  transition: 0.3s ease;
+}
+.search_st a:hover {
+  background-color: #ff9d00;
+  color: #fff;
+}
 .sttable {
   width: 100%;
   padding-top: 18px;
@@ -153,7 +172,7 @@ td {
     display: none;
   }
 }
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 716px) {
   .search_st {
     flex-wrap: wrap;
     justify-content: center;
@@ -165,13 +184,27 @@ td {
     overflow-x: auto;
   }
 }
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 525px) {
   .sttable table th:nth-child(5),
   td:nth-child(5) {
     display: none;
   }
   .search_st .search input {
     width: 200px;
+  }
+}
+@media screen and (max-width: 325px) {
+  .search_st .section {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .search_st button,
+  .search_st a {
+    margin: 10px 0;
+    width: 100%;
+    text-align: center;
   }
 }
 @media screen and (max-width: 250px) {
