--- a/src/assets/css/stlogin.css
+++ b/src/assets/css/stlogin.css
@@ -130,6 +130,7 @@
 .login_body .login_column .login_form .but p {
   font-size: 13px;
   font-weight: 500;
+  color: #ff9d00;
 }
 .login_body .login_column .login_form .but p a {
   text-decoration: none;
